If there are no Upcoming Tasks the case was not intercepted and there was an error now this is intercepted with 0 Upcoming Tasks the image is simply hidden there is then only the text 0 Upcomming Tasks

--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -37,12 +37,15 @@
         </div>
         <div id="deadline">
           <div class="border-style" routerLink="/board">
-            <div
-              id="prioContainer"
-              [ngStyle]="{ 'background-color': deadlineBgColor }"
-            >
-              <img [src]="deadlineImgSrc" alt="Priority Icon" />
-            </div>
+            @if (deadlineImgSrc != "") {
+              <div
+                id="prioContainer"
+                [ngStyle]="{ 'background-color': deadlineBgColor }"
+              >
+                <img [src]="deadlineImgSrc" alt="Priority Icon" />
+              </div>
+            }
+
             <div>
               <div class="amount-description">
                 <p>{{ urgentTaskCount }}</p>
